# smart-chess-rust

./: .dockerignore  .env  .env.macos  .env.runpod  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: rust.yml
notebooks/: check_model.ipynb  learning_curve.ipynb  verify_dataset.ipynb  verify_model.ipynb  visualize_dataset.ipynb  visualize_mcts.ipynb
profiling/: command  flamegraph  flamegraph-selfplay  rocprof-selfplay
proto/: docarray.proto
py/: dataset.py  debug.py  export.py  module.py  nn.py
py/chess/: dataset.py
py/game_chess/: module.py
py/game_hexapawn/: module.py
py/modules/: hexapawn.py
py/validation/: sample.csv
scripts/: benchmark.py  clean  elo.py  eval_speed.py  export_model.py  iterate  leader-board  loop  run_batch  run_batch.sh  sample.py  serve.py  show-result  to_torchscript.py  tournament  train.py  validate_inference.py  validate_model.py  visualize.ipynb  watch-trace
src/: chess.rs  chess_fast.rs  debug.rs  game.rs  hexapawn.rs  hexapawn_play.rs  knightmoves.rs  lib.rs  main.rs  mcts.rs  play.rs  queenmoves.rs  trace.rs  underpromotions.rs
src/backends/: grpc.rs  mod.rs  onnx.rs  py.rs  torch.rs
utils/: Makefile  load_ts.rs
