[package]
name = "smartchess"
version = "0.0.0"
edition = "2021"

[lib]
name = "smartchess"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "smartchess"
path = "src/main.rs"

[[bin]]
name = "play"
path = "src/play.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"

[dependencies]
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
numpy = "0.23.0"
ndarray = "=0.15"
rand = "0.8.5"
rand_distr = "0.4.3"
recursive_reference = "0.3.0"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
clap = { version = "4.4.11", features = ["derive"] }
backtrace-on-stack-overflow = "0.3.0"
cached = "0.46.1"
uci = "0.1.3"
string-builder = "0.2.0"
tch = "0.18.1"
# ort = "2.0.0-alpha.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libloading = "0.8"
once_cell = "1.19.0"
c_str_macro = "1.0.3"

[profile.release]
debug = true
