[package]
name = "smartchess"
version = "0.0.0"
edition = "2021"

[lib]
name = "smartchess"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "selfplay"
path = "src/main.rs"

[[bin]]
name = "play"
path = "src/play.rs"

[build-dependencies]
cxx-build = "1.0"
pyo3-build-config = "0.23.4"
tonic-build = "0.12.3"

[dev-dependencies]
criterion = "0.5"

[dependencies]
ort = { version = "=2.0.0-rc.12", features = [
  "ndarray",
  "rocm",
  "cuda",
  "migraphx",
  "half",
  "load-dynamic",
] }
half = "2.6.0"
cxx = "1.0"
pyo3 = { version = "0.28.0", features = ["auto-initialize"] }
numpy = "0.28.0"
ndarray = "=0.17.2"
rand = "0.8.5"
rand_distr = "0.4.3"
recursive_reference = "0.3.0"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
clap = { version = "4.4.11", features = ["derive"] }
backtrace-on-stack-overflow = "0.3.0"
cached = "0.46.1"
uci = "0.1.3"
string-builder = "0.2.0"
tch = { path = "../tch-rs/" }
torch-sys = { path = "../tch-rs/torch-sys/" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libloading = "0.8"
once_cell = "1.19.0"
c_str_macro = "1.0.3"
short-uuid = "0.1.4"
aotinductor = { path = "../aotinductor/", optional = true }
tonic = { version = "=0.12.3", optional = true }
prost = { version = "=0.13.2", optional = true }
prost-types = { version = "=0.13.2", optional = true }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
bytemuck = "1.22.0"
chess = "3.2.0"

[profile.release]
debug = true

[features]
aotinductor = ["dep:aotinductor"]
jina = ["dep:tonic", "dep:prost", "dep:prost-types"]

#[[bench]]
#name = "chess_bench"
#harness = false
