[project]
name = ""
version = "0.0.1"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chess==1.11.1",
    "lightning[extra]==2.5.0",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "onnx>=1.15.0,<2",
    "sympy>=1.12,<2",
    "tensorboard>=2.15.1,<3",
    "timm>=1.0.21,<2",
    "torch",
    "torchvision",
    "pytorch-triton-rocm",
    "pandas>=2.2.3,<3",
    "ipython>=8.31.0,<9",
    "jupyterlab>=4.3.4,<5",
    "jina>=3.33.1,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
