[project]
name = "smart-chess-rust"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "chess==1.11.1",
  "matplotlib==3.8.2",
  "numpy==1.26.2",
  #"onnx>=1.15.0,<2",
  "sympy>=1.12,<2",
  "tensorboard>=2.15.1,<3",
  "pandas>=2.2.3,<3",
  "jina>=3.33.1,<4",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "jupyterlab>=4.1.6",
  "timm>=1.0.26",
  "lightning[extra]>=2.6.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm7.2"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
